# scorecard-pipeline

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  dump.rdb  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt  run_worker.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
app/: __init__.py  audio_processor.py  config.py  database.py  logging_config.py  main.py  maintenance.py  models.py  notifications.py  queue.py  schemas.py  scoring.py  security.py  services.py  tasks.py  text_utils.py
data/synthetic/: checklist_dados_senior.json  checklist_frontend_junior.json  checklist_python_pleno.json  competency_dados_senior.json  competency_frontend_junior.json  competency_python_pleno.json  interview_dados_senior.json  interview_frontend_junior.json  interview_python_pleno.json  job_dados_senior.json  job_frontend_junior.json  job_python_pleno.json
docs/adr/: 0001-fila-vs-polling.md  0002-lookup-deterministico-vs-rag.md  0003-rq-vs-celery.md  0004-avaliacao-cultura-fit-bias.md
docs/reports/: benchmark_wer_report.md
docs/reviews/: 2026-07-02-architecture-review.md
docs/specs/: frontend-rewrite-prompt.md
docs/specs/pipeline-scorecard-ia/: README.md  prompts_execucao.md
docs/specs/pipeline-scorecard-ia/milestone-1-infra-dados/: 1.1-docker-postgres-estado.md  1.2-dados-sinteticos.md
docs/specs/pipeline-scorecard-ia/milestone-2-ingestao-fila/: 2.1-fastapi-webhook-estado.md  2.2-worker-rq-resiliencia.md
docs/specs/pipeline-scorecard-ia/milestone-3-audio-processamento/: 3.1-transcricao-diarizacao.md  3.2-benchmark-wer.md
docs/specs/pipeline-scorecard-ia/milestone-4-scoring-notificacoes/: 4.1-contexto-scoring-engine.md  4.2-notificacoes-callback.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts  errors.ts  normalize.test.ts  normalize.ts  types.ts
frontend/src/components/: ConfigPanel.tsx  ErrorState.tsx  Header.tsx  HealthIndicator.tsx  Loading.tsx  StatusBadge.tsx
frontend/src/config/: settings.ts
frontend/src/features/interviews/: DecisionActions.tsx  (+10 more)
frontend/src/hooks/: useConfig.ts  useHashRoute.ts  usePolling.test.ts  usePolling.ts
frontend/src/lib/: format.test.ts  format.ts  status.test.ts  status.ts  transcript.test.ts  transcript.ts
frontend/src/test/: fixtures.ts
scripts/: generate_synthetic.py  interview_profiles.py  run_benchmark.py
tests/: conftest.py  test_integration_e2e.py  test_milestone2.py  test_milestone3.py  test_milestone4.py  test_models.py  test_synthetic.py  test_worker_and_services.py
